[Fix] colors contrasts

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
   --primary : rgb(0, 155, 158);
   --secondary : rgb(235, 154, 7);
   --purple: rgb(164, 79, 233);
-  --purple-light: rgb(179, 84, 255);
+  --purple-light: rgb(227, 195, 255);
   --text: #2a133d;
   --green: rgb(0, 201, 130);
   --gradient-primary : linear-gradient(to bottom, #009B9E, #00C982);
